Setting up enzyme

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "learn_co_groups",
-    "private": true,
-    "scripts": {
-	"test": "jest"
-    },
+  "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "@rails/actioncable": "^6.0.0-alpha",
@@ -19,16 +19,21 @@
   "version": "0.1.0",
   "devDependencies": {
     "babel-jest": "^24.9.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.9.0",
     "webpack-dev-server": "^3.8.1"
   },
-    "jest": {
-	"roots": [
-	    "spec/javascript"
-	],
-	"moduleDirectories": [
-	    "node_modules",
-	    "app/javascript"
-	]
-    }
+  "jest": {
+    "roots": [
+      "spec/javascript"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "app/javascript"
+    ],
+    "setupFilesAfterEnv": [
+      "./spec/javascript/setupTests.js"
+    ]
+  }
 }
