--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
